k8s/apps/default/matterjs/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matterjs
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: matterjs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matterjs
      annotations:
        k8s.v1.cni.cncf.io/networks: |-
          [{
            "name": "iot",
            "namespace": "kube-system",
            "ips": ["10.1.3.122/24", "fd74:f571:d3bd:40:b8e3:4d10:fa62:93c1/64"],
            "mac": "02:d8:6a:f3:81:29"
          }]
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        runAsNonRoot: false
        sysctls:
          - name: net.ipv6.conf.net1.accept_ra
            value: "2"
          - name: net.ipv6.conf.net1.accept_ra_defrtr
            value: "1"
          - name: net.ipv6.conf.net1.accept_ra_rt_info_max_plen
            value: "64"
      containers:
        - name: matterjs
          image: ghcr.io/matter-js/matterjs-server:1.3.3@sha256:ac537ba44a2edaaf785b818f8b7ce75cdf736539401462046f0042670bee4063
          imagePullPolicy: IfNotPresent
          args:
            - --storage-path=/data
            - --primary-interface=net1
            - --log-level=debug
          ports:
            - name: http
              containerPort: 5580
              protocol: TCP
          securityContext:
            privileged: true
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: matterjs
