k8s/apps/default/matterjs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matter-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: matterjs
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
